public/stylesheets/layout.css
/* @override 
	http://kato.dev/stylesheets/layout.css?1308524046
	http://kato.dev/stylesheets/layout.css
	http://localhost:3000/stylesheets/layout.css
*/

body {
	background-color: black;
	/*background-image: -webkit-gradient(
    linear,
    left bottom,
    left top,
    color-stop(0.2, rgb(28,49,77)),
    color-stop(0.5, rgb(0,0,0))
);
background-image: -moz-linear-gradient(
    center bottom,
    rgb(43,88,143) 50%,
    rgb(28,49,77) 20%
);*/

	margin: 0px;
	padding: 10px;
	/*font-family: Georgia, "Times New Roman", Times, serif;*/
}

.sidebar h3 {
	margin-top: 0px;	
	font-family: 'Gloria Hallelujah', cursive;

}

div.content_list {
	float: left;
	width: 580px;
	padding-right: 10px;
	margin-right: 10px;
	border-right: 1px solid #e8e8e8;
}

div.message_content {
	overflow: auto;	
	padding-left: 20px;
}

div.ingredients {
	float: left;
	margin-right: 20px;
	width: 180px;
}

.inner div.photo_zone a img {
	width: 100%;
}

.inner div.photo_zone {
	height: auto !important;
}

div.inner div.tipsy {
	max-width: 400px !important;
}

#messages_list li.last,
#messages_list .message.last {
	margin-right: 0px !important;
}

#most_voted .message.last {
	margin-bottom: 0px !important;
}


.sidebar ul#most_voted .message {
	margin-right: 0px;
}
div.sidebar {
	float: left;
	width: 200px;
}
div.input {
	width: 700px;
}

div.input.select.required {
	margin-bottom: 10px;	
}

input.required,
textarea.text {
	margin-bottom: 10px;
}

.wrapper {
	-webkit-box-shadow: 0px 0px 10px 0px #11162e;
-moz-box-shadow: 0px 0px 10px 0px #11162e;
box-shadow: 0px 0px 10px 0px #11162e;
	background-color: white;
	overflow: auto;
	padding: 10px;
	padding-left: 20px;
	clear: both;
	width: 810px;
}

#header ul {
	float: left;
	margin-left: 430px;
}

#header ul li {
	float: left;
	font-size: 11px;
	margin-right: 0px;
	list-style: none;
	/*background-color: #fffeff;*/
	padding: 5px 8px;
	/*-webkit-box-shadow: 0px 0px 10px 0px #11162e;
-moz-box-shadow: 0px 0px 10px 0px #11162e;
box-shadow: 0px 0px 10px 0px #11162e;*/



}

#header ul li a.button {
	width: auto;
	-webkit-box-shadow: none;
	-moz-box-shadow: none;
	box-shadow: none;
}

label.optional {
	display: block;
	font-family: Arial, Helvetica, Geneva, sans-serif;
	margin-bottom: 5px;
	color: #0352a7;
	font-size: 12px;
}


h1, h2 { font-family: 'Gloria Hallelujah', cursive;
margin: 0px; margin-bottom: 10px;
font-size: 26px;
	color: #0352a7;
}

h3 {
	font-family: 'Gloria Hallelujah', cursive;
	font-size: 20px;
	margin-bottom: 0px;
	color: #0247a4;
}

h2 {
  
  font-size: 20px;
  
}

h2 span.name {
  
  text-transform: capitalize;
  
}


div#logo {
	/*-webkit-box-shadow: 0px 0px 10px 0px #11162e;
-moz-box-shadow: 0px 0px 10px 0px #11162e;
box-shadow: 0px 0px 10px 0px #11162e;*/

	/*background-image: url(../images/logo.png);*/
	/*height: 84px;
	width: 501px;*/
	/*text-indent: -9999px;*/
	margin-bottom: 10px;
	float: left;
}
div#logo h1 {
	overflow: auto;
	font-family: Arial;
	text-indent: -9999px;
}

.section_header h3.left {
	margin-top: 0px;
}
div#logo h1 a {
	/*float: left;*/
	width: 150px;
	height: 23px;
	display: block;
	text-indent: -9999px;
	background: url(../images/logo_bbva.png) no-repeat;
}
h2#contest_logo {
	overflow: auto;
}
h2#contest_logo a {
	float: left;
	background-image: url(../images/logo_concurso.png);
	height: 100px;
	text-indent: -9999px;
	width: 150px;
}

.ingredients h3 {
	display: block;
	height: 30px;
	background: url(../images/ingredientes.png) no-repeat;
	padding-left: 35px;
	padding-top: 5px;
}

.how_to h3 {
	display: block;
	height: 30px;
	background: url(../images/preparacion.png) no-repeat;
	padding-left: 35px;
	padding-top: 5px;
}

.content_list p {
	margin-top: 0px;
	font: 12px/1.6em Arial, Helvetica, Geneva, sans-serif;
}

p.description {
	color: #808080;
	margin-bottom: 20px;
}

#messages_list h3 {
	margin-top: 0px;	
	margin-bottom: 25px;
	font-size: 35px;
	line-height: 1em;
}

h3.color_0 {
	color: #d4a963;
}

h3.color_1 {
	color: #d46f69;
}

h3.color_2 {
	color: #983826;
}

h3.color_3 {
	color: #763a5e;
}

h3.color_4 {
	color: #6c7644;
}

h3.color_5 {
	color: #d66e35;
}

h3.color_6 {
	color: #8a3d28;
}

h3.color_7 {
	color: #ba585f;
}

h3.color_8 {
	color: #aa2828;
}

h3.color_9 {
	color: #d1833b;
}

h3.color_10 {
	color: #c8642f;
}



div#footnotes_debug {
		-webkit-box-shadow: 0px 0px 10px 0px #11162e;
-moz-box-shadow: 0px 0px 10px 0px #11162e;
box-shadow: 0px 0px 10px 0px #11162e;
background-color: white;
padding: 10px;
margin-top: 10px;
}


ul#categories {
	padding: 0px;	
	overflow: auto;
}

ul#categories li {
	float: left;
	list-style-type: none;
	
}

ul#categories li a {
	display: block;
	width: 60px;
	height: 30px;
	padding: 10px;
	padding-top: 20px;
	text-decoration: none;
	background-color: #f0f0f0;
	font-family: 'Gloria Hallelujah', cursive;
	font-size: 16px;
}
ul#categories li a:hover {
	background-color: #e4e4e4;
}
ul#categories li a:active {
	background-color: #d8d8d8;
}




form {
  /* Reset margins & Padding */
  /* Nested Fieldsets and Legends */
  /* Text Fields */
  /* Buttons */ }
  form ul, form ol, form li, form fieldset, form legend, form input, form textarea, form select, form p {
    margin: 0;
    padding: 0; }
  form ol, form ul {
    list-style: none; }
  form fieldset {
    border: 0;
    padding: 10px 0;
    margin-bottom: 20px; }
    form fieldset.inputs {
      background: #f4f4f4;
      -webkit-border-radius: 4px;
      -moz-border-radius: 4px;
      border-radius: 4px;
      box-shadow: inset 0 1px 4px #dddddd;
      -moz-box-shadow: inset 0 1px 4px #dddddd;
      -webkit-box-shadow: inset 0 1px 4px #dddddd; }
    form fieldset legend {
      width: 100%; }
/* ... */

